--- a/src/application_projet/Accueil.fxml
+++ b/src/application_projet/Accueil.fxml
@@ -5,8 +5,8 @@
 <?import javafx.scene.layout.VBox?>
 
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="application_projet.Accueil_Controller">
+   <children>																													
       <BorderPane prefHeight="200.0" prefWidth="200.0">
          <top>
             <Button id="QuitterAppli" mnemonicParsing="false" text="Quitter" BorderPane.alignment="TOP_LEFT" />
@@ -17,7 +17,8 @@
       </BorderPane>
       <BorderPane prefHeight="200.0" prefWidth="200.0">
          <center>
-            <Button id="EtatStocks" maxWidth="200.0" mnemonicParsing="false" prefHeight="50.0" text="Etat des stocks" BorderPane.alignment="CENTER" />
+            <Button id="EtatStocks" maxWidth="200.0" mnemonicParsing="false" prefHeight="50.0" text="Etat des stocks" BorderPane.alignment="CENTER" 
+            onAction="#handle"/>
          </center>
       </BorderPane>
    </children>
