--- a/src/application_projet/EtatStocks.fxml
+++ b/src/application_projet/EtatStocks.fxml
@@ -1,23 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.VBox?>
+<?import java.lang.*?>
+<?import java.util.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.control.cell.*?>
+<?import javafx.scene.layout.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
-   <children>
-      <BorderPane prefHeight="200.0" prefWidth="200.0">
-         <top>
-            <Button id="QuitterAppli" mnemonicParsing="false" text="Quitter" BorderPane.alignment="TOP_LEFT" />
-         </top>
-         <center>
-            <Button id="ChainesProduction" maxWidth="200.0" mnemonicParsing="false" prefHeight="50.0" text="Chaînes de production" BorderPane.alignment="CENTER" />
-         </center>
-      </BorderPane>
-      <BorderPane prefHeight="200.0" prefWidth="200.0">
-         <center>
-            <Button id="EtatStocks" fx:id="EtatDesStocks" maxWidth="200.0" mnemonicParsing="false" prefHeight="50.0" text="Etat des stocks" BorderPane.alignment="CENTER" />
-         </center>
-      </BorderPane>
-   </children>
-</VBox>
+<AnchorPane id="AnchorPane" prefHeight="402.0" prefWidth="323.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="application_projet.EtatStocksController">
+    <children>
+      <TableView fx:id="table" layoutX="23.0" layoutY="21.0" prefHeight="334.0" prefWidth="278.0" AnchorPane.bottomAnchor="47.0" AnchorPane.leftAnchor="23.0" AnchorPane.rightAnchor="22.0" AnchorPane.topAnchor="21.0">
+        <columns>
+          	<TableColumn prefWidth="135.0" text="Code">
+                            <cellValueFactory><PropertyValueFactory property="code"/></cellValueFactory>
+      		</TableColumn>
+      
+          	<TableColumn minWidth="0.0" prefWidth="142.0" text="Nom">
+                     <cellValueFactory><PropertyValueFactory property="nom"/></cellValueFactory>
+                    
+          </TableColumn>
+          <TableColumn minWidth="0.0" prefWidth="142.0" text="Quantité">
+                     <cellValueFactory><PropertyValueFactory property="quantite"/></cellValueFactory>
+          </TableColumn>
+        </columns>
+      </TableView>
+    </children>
+</AnchorPane>
