--- a/src/application_projet/Accueil.fxml
+++ b/src/application_projet/Accueil.fxml
@@ -4,21 +4,19 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="application_projet.AccueilController">
-   <children>																													
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application_projet.AccueilController">
+   <children>
       <BorderPane prefHeight="200.0" prefWidth="200.0">
-         <top>
-            <Button id="QuitterAppli" mnemonicParsing="false" text="Quitter" BorderPane.alignment="TOP_LEFT" />
-         </top>
+       <top>
+            <Button fx:id="closeButton" mnemonicParsing="false" onAction="#gestionButonFermer" text="Quitter" BorderPane.alignment="TOP_LEFT" />
+         </top> 
          <center>
             <Button id="ChainesProduction" maxWidth="200.0" mnemonicParsing="false" prefHeight="50.0" text="Chaînes de production" BorderPane.alignment="CENTER" />
          </center>
       </BorderPane>
       <BorderPane prefHeight="200.0" prefWidth="200.0">
          <center>
-            <Button id="EtatStocks" maxWidth="200.0" mnemonicParsing="false" prefHeight="50.0" text="Etat des stocks" BorderPane.alignment="CENTER" 
-            onAction="#handle"/>
+            <Button id="EtatStocks" fx:id="EtatStocks" maxWidth="200.0" mnemonicParsing="false" onAction="#handle" prefHeight="50.0" text="Etat des stocks" BorderPane.alignment="CENTER" />
          </center>
       </BorderPane>
    </children>
