--- a/src/main/java/application_projet/ListeChProduction.fxml
+++ b/src/main/java/application_projet/ListeChProduction.fxml
@@ -6,21 +6,26 @@
 <?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.layout.AnchorPane?>
 
+<?import javafx.scene.control.TextField?>
 <AnchorPane id="AnchorPane" prefHeight="374.0" prefWidth="449.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="application_projet.ListeChProdController">
     <children>
-      <TableView fx:id="table" editable="true" layoutX="75.0" layoutY="39.0" prefHeight="264.0" prefWidth="308.0" AnchorPane.bottomAnchor="71.0" AnchorPane.leftAnchor="75.0" AnchorPane.rightAnchor="66.0" AnchorPane.topAnchor="39.0">
+      <TableView fx:id="table" layoutX="75.0" layoutY="39.0" prefHeight="264.0" prefWidth="308.0" AnchorPane.bottomAnchor="71.0" AnchorPane.leftAnchor="75.0" AnchorPane.rightAnchor="66.0" AnchorPane.topAnchor="39.0">
         <columns>
           	<TableColumn prefWidth="89.0" text="Code">
-                            <cellValueFactory><PropertyValueFactory property="code" /></cellValueFactory>
+                <cellValueFactory><PropertyValueFactory property="code" /></cellValueFactory>
       		</TableColumn>
       
           	<TableColumn minWidth="0.0" prefWidth="119.0" text="Nom">
-                     <cellValueFactory><PropertyValueFactory property="nom" /></cellValueFactory>        
+                <cellValueFactory><PropertyValueFactory property="nom" /></cellValueFactory>
           	</TableColumn>
         </columns>
       </TableView>
      <Button fx:id="RetourAccueil" layoutX="2.0" layoutY="1.0" mnemonicParsing="false" onAction="#gestionButonRetour" text="Retour" />
       <Button fx:id="AjouterChaine" layoutX="84.0" layoutY="341.0" mnemonicParsing="false" text="Ajouter" />
       <Button fx:id="SupprimerChaine" layoutX="286.0" layoutY="341.0" mnemonicParsing="false" text="Supprimer" />
+        <Button fx:id="Evaluer" layoutX="150.0" layoutY="341.0" mnemonicParsing="false" onAction="#gestionButonEvaluer" text="Lancer l'évaluation" />
+        <TextField fx:id="chaine1" layoutX="278.0" layoutY="61.0" onAction="#recupNivActivation1" prefHeight="12.0" prefWidth="98.0" />
+        <TextField fx:id="chaine2" layoutX="278.0" layoutY="86.0" onAction="#recupNivActivation2" prefHeight="12.0" prefWidth="98.0" />
+        <TextField fx:id="chaine3" layoutX="277.0" layoutY="112.0" onAction="#recupNivActivation3" prefHeight="12.0" prefWidth="98.0" />
     </children>
 </AnchorPane>
